--- a/bundles/org.eclipse.platform.doc.isv/guide/ant_eclipse_tasks.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/ant_eclipse_tasks.htm
@@ -33,7 +33,6 @@ IResource.refreshLocal()</b></a> method. Example:</p>
 <h3 >
 eclipse.incrementalBuild</h3>
 
-
 <p>
 This task is a wrapper to <b>
 <a href="../reference/api/org/eclipse/core/resources/IProject.html#build(int, org.eclipse.core.runtime.IProgressMonitor)">
@@ -41,15 +40,28 @@ IProject.build()</a></b> and <b>
 <a href="../reference/api/org/eclipse/core/resources/IWorkspace.html#build(int, org.eclipse.core.runtime.IProgressMonitor)">
 IWorkspace.build()</a></b> methods. Examples:</p>
 
-
 <pre><font color="#4444CC">&lt;eclipse.incrementalBuild/&gt;</font></pre>
-
 
 <pre>
 <font color="#4444CC">&lt;eclipse.incrementalBuild project=&quot;MyProject&quot;/&gt;
 </font>
-
 </pre>
 
+<ul>
+  <li> <b>project</b> the project to be built</li>
+</ul>
+
+<h3 >
+eclipse.convertPath</h3>
+
+<p>
+Converts a file system path to a resource path and vice-versa. The resulting value is
+assigned to the given property. Examples:</p>
+
+<pre><font color="#4444CC">&lt;eclipse.convertPath fileSystemPath=&quot;${basedir}&quot; property=&quot;myPath&quot;/&gt;</font></pre>
+
+<pre><font color="#4444CC">&lt;eclipse.convertPath resourcePath=&quot;MyProject/MyFile&quot; property=&quot;myPath&quot;/&gt;</font></pre>
+
+<br>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corp. and others 2000,2002."width="250" height="12"></a></p>
 </BODY></HTML>
