Removed references to ref-48b.html and ref-48c.htm

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27c.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27c.htm
@@ -48,8 +48,7 @@ tools can also be used    by CVS.</p>
    
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference"
  width="159" height="27">
-<a href="../reference/ref-48b.htm"><br>
- </a><a href="../reference/ref-47.htm"> CVS</a> <br>
+<br><a href="../reference/ref-47.htm"> CVS</a> <br>
 <a href="../reference/ref-32.htm">CVS Repositories view</a> </p>
   
 <p>&nbsp;<br>
