--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-68.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-68.htm
@@ -52,7 +52,7 @@ resources.
 </dl>
 
 <p><em>Tip:</em> You can customize the behavior of the comparison editor by
-selecting <b>Workbench &gt; Preferences &gt; Workbench &gt; Compare Viewers</b>
+selecting <b>Workbench &gt; Preferences &gt; Workbench &gt; Compare</b>
 from the main menu bar. You can select to &quot;lock scroll&quot; the pane
 contents, as well as setting options for showing conflicts with other team
 members and changing the default font.</p>
