--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_search.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_search.htm
@@ -30,7 +30,7 @@ Creating a java search pattern
 A search pattern defines how search results are found. You can either create a search pattern from a java element (see
 <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createSearchPattern(org.eclipse.jdt.core.IJavaElement, int)">createSearchPattern(IJavaElement, int)</a></b>) 
 or from a string (see <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createSearchPattern(java.lang.String, int, int, boolean)">createSearchPattern(String, int, int, boolean)</a></b>.)
-The last method supports wildcard (i.e. '*') and can be used to widen the search results.</P>
+The last method supports wildcards (i.e. '*') and can be used to widen the search results.</P>
 <P>
 For example, creating a search pattern for searching for references to a given method is done as follows:</P>
 <font color='#4444CC'><pre>
@@ -41,7 +41,7 @@ For example, creating a search pattern for searching for references to a given m
     ISearchPattern pattern = SearchEngine.createSearchPattern(method, IJavaSearchConstants.REFERENCES);
 </pre></font>
 <P>
-Or creating a search pattern for searching for declarations of all types starting with "Obj" is done as follows:</P>
+Or creating a search pattern for searching for declarations of all types starting with "Obj":</P>
 <font color='#4444CC'><pre>
     // Create search pattern
     ISearchPattern pattern = SearchEngine.createSearchPattern("Obj*", IJavaSearchConstants.TYPE, IJavaSearchConstants.DECLARATIONS, true);
@@ -65,7 +65,7 @@ For example, creating a search scope on a given package is done as follows:</P>
     IJavaSearchScope scope = SearchEngine.createJavaSearchScope(new IJavaElement[] {pkg});
 </pre></font>
 <P>
-Creating a search scope on the hierarchy of a given type is done as follows:</P>
+Or creating a search scope on the hierarchy of a given type is:</P>
 <font color='#4444CC'><pre>
     // Get the type
     IType type = ...;
@@ -120,31 +120,31 @@ method. Paragraphs below detail each argument to this method. </P>
 Resources and Java elements</h4>
 <P>
 A search result can correspond to a Java element (e.g. a type declaration) or it can be contained in a Java element
-(e.g. a reference to a type inside a method.) The search engine always tries to find the inner most Java element that
+(e.g. a reference to a type inside a method). The search engine always tries to find the inner most Java element that
 corresponds to or that contains the search result. For example, searching for type declarations by name could find
 a local type declaration. Since the Java model doesn't represent local types, the method that contains this local type 
-declaration will be given to the result collector. </P>
+declaration is given to the result collector. </P>
 <P>
 The search engine also tries to give the resource that contains the Java element to the result collector. So if the Java
-element is a method in a compilation unit, the resource will be the corresponding <b>IFile</b>. If the element is contained in 
-a .jar file, the resource will be the .jar file if this .jar file is in the workspace. If it is an external .jar file, then the resource
-will be <b>null</b>. </P>
+element is a method in a compilation unit, the resource is the corresponding <b>IFile</b>. If the element is contained in 
+a .jar file, the resource is the .jar file if this .jar file is in the workspace. If it is an external .jar file, then the resource
+is <b>null</b>. </P>
 
 <H4>
 Source positions</h4>
 <P>
-Source positions are given relatively to the compilation unit that contains the search result. If the search result is contained in 
+Source positions are given relative to the compilation unit that contains the search result. If the search result is contained in 
 a .jar file, the source positions are relative to the attached source. They are (-1, -1) if there is no source attached to 
 the .jar file. </P>
 
 <H4>
 Accurate versus inaccurate search results</h4>
 <P>
-In most cases, the search result are accurate, meaning that the search engine was able to determine that the given
-match is what was asked for. However in some cases the search engine is unable to do so. The match will be said
+In most cases search results are accurate, meaning that the search engine was able to determine that the given
+match is what was asked for. However in some cases the search engine is unable to do so, in such cases the match is
 inaccurate. Some posible reasons why a match is inaccurate are:
 <ul>
-<li>The classpath on the project that contains the result is not properly set. For example it refers to a project that is
+<li>The classpath on the project that contains the result is not properly set. For example, it refers to a project that is
       not accesible, a jar on the classpath requires another jar that is not on the classpath, etc.</li>
 <li>The user code would not compile. For example, it refers to a class that is not yet defined.</li>
 </ul> </P>
