--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62b_sync.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62b_sync.htm
@@ -21,7 +21,7 @@ others have made (update).
 </P>
 
 <blockquote>
-  <P><img align="texttop" border="0" src="../images/image82_repo_syncview.jpg"  alt="Synchonize - Release Mode">
+  <P><img align="texttop" border="0" src="../images/image82_repo_syncview.jpg"  alt="Synchonize - Release Mode" width="530" height="513">
 </P>
 
 
