--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62c_releasing.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62c_releasing.htm
@@ -31,7 +31,7 @@ ahead and commit the work we have done.
 In the Structured Compare list select file1.txt</P>
 <blockquote>
 <P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image82_repo_release.jpg"  alt="Structure Compare"></P>
+<img align="texttop" border="0" src="../images/Image82_repo_release.jpg"  alt="Structure Compare" width="236" height="136"></P>
 </blockquote>
 </TD>
 </TR>
@@ -58,7 +58,7 @@ comment.</P>
 <TD valign="top" align="left">
 Observe that file1.txt is no longer in the list.
 <blockquote>
-  <p><img align="texttop" border="0" src="../images/Image82_repo_release2.jpg"  alt="Structure Compare"></p>
+  <p><img align="texttop" border="0" src="../images/Image82_repo_release2.jpg"  alt="Structure Compare" width="214" height="138"></p>
 </blockquote>
   <p>In addition to committing individual resources we can also select
 the project and commit all of the changes in the project.</p>
@@ -92,7 +92,7 @@ Click on the Resource perspective button in the shortcut bar (at the far left of
 the window).
 <blockquote>
   <blockquote>
-    <p><img align="texttop" border="0" src="../images/image82_repo_res.jpg"  alt="Resource Perspective"></p>
+    <p><img align="texttop" border="0" src="../images/image82_repo_res.jpg"  alt="Resource Perspective" width="110" height="125"></p>
   </blockquote>
 </blockquote>
 </TD>
@@ -120,7 +120,7 @@ Repository again from the context menu.
 <p>When the
 Synchronize view opens, there is only one change, the new file3.txt.</p>
 <blockquote>
-  <p><img align="texttop" border="0" src="../images/Image82_repo_rel5.jpg" alt="Release mode"></p>
+  <p><img align="texttop" border="0" src="../images/Image82_repo_rel5.jpg" alt="Release mode" width="409" height="169"></p>
 </blockquote>
 </TD>
 </TR>
