--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_mod.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_mod.htm
@@ -32,7 +32,7 @@ Start by modifying file2.txt as follows
 <p>New Contents (changes shown in bold)</p>
 <blockquote>
     <p><i>This is the <b>Jane-update </b>contents<br>
-    of file 1.&nbsp;</i></p>
+    of file 2.&nbsp;</i></p>
 </blockquote>
 </TD>
 </TR>
@@ -64,13 +64,13 @@ Modify file3.txt as follows
         on the CVS label decorations (on page Workbench &gt; Label Decorations 
         and ensure CVS is checked).</P>
 <blockquote>
-  <P CLASS="Para"><img align="texttop" border="0" src="../images/Image83_fred_info.jpg" alt="Navigator View" width="341" height="133" ></P>
+  <P CLASS="Para"><img align="texttop" border="0" src="../images/Image84_decorator_preference.jpg" alt="Navigator View" width="605" height="529" ></P>
 </blockquote>
       <P CLASS="Para">Observe that the Navigator updates to show the CVS state of a 
         resource. Notice that the two files which Fred has changed are preceded 
         by &quot;&gt;&quot;.</P>
 <blockquote>
-  <P CLASS="Para"><img align="texttop" border="0" src="../images/Image83_jane1.jpg" alt="Navigator View" width="249" height="159" >&nbsp;</P>
+  <P CLASS="Para"><img align="texttop" border="0" src="../images/Image83_jane1.jpg" alt="Navigator View" width="236" height="160" >&nbsp;</P>
 </blockquote>
 <p>&nbsp;
 </TD>
@@ -113,7 +113,7 @@ Select the project (JanesTeamProject)</P>
         to the same resource as the one you want to commit.</p>
 <p>The second thing worth noting is that the status bar has red text indicating
 what changes need to be considered.</p>
-<p><img align="texttop" border="0" src="../images/Image83_jane3_status.jpg" alt="Status line" width="308" height="22" >
+<p><img align="texttop" border="0" src="../images/Image83_jane3_status.jpg" alt="Status line" width="379" height="27" >
 </TD>
 </TR>
 <TR>
@@ -124,13 +124,13 @@ what changes need to be considered.</p>
 </TD>
 <TD valign="top" align="left">
 Select file1.txt (the incoming change). The comparison viewer shows:&nbsp;
-<p><img align="texttop" border="0" src="../images/Image83_jane4.jpg" alt="Compare View" width="484" height="114">
+<p><img align="texttop" border="0" src="../images/Image83_jane4.jpg" alt="Compare View" width="615" height="154">
 </TD>
 </TR>
 </TBODY>
 </TABLE>
 <P>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </P>
 
 
