--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync2.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync2.htm
@@ -24,7 +24,7 @@
     <TD valign="top" align="left"> Confirm that the Synchronize view is in Incoming 
       Mode (#1). If not then press the Incoming Mode button on the local toolbar 
       (#2). 
-      <p><img align="texttop" border="0" src="../images/Image83_jane5a.jpg" alt="Incoming mode" width="481" height="128" ></p>
+      <p><img align="texttop" border="0" src="../images/Image83_jane5a.jpg" alt="Incoming mode" width="556" height="411" ></p>
 <p>&nbsp;
 </TD>
 </TR>
@@ -36,8 +36,8 @@
 </TD>
 <TD valign="top" align="left">
 Select file1.txt (the incoming change). The comparison viewer shows that&nbsp;the
-repository copy of file1.txt has a new line inserted (Fred-Update).
-<p><img align="texttop" border="0" src="../images/Image83_jane4.jpg" alt="Text Compare" width="484" height="114" >
+repository copy of file1.txt has a new line inserted (Fred-update).
+<p><img align="texttop" border="0" src="../images/Image83_jane4.jpg" alt="Text Compare" width="615" height="154" >
 </TD>
 </TR>
 <TR>
@@ -60,7 +60,7 @@ repository copy of file1.txt has a new line inserted (Fred-Update).
 Select file2.txt. The comparison viewer shows that&nbsp;the repository copy of
 file1.txt and our copy of file1.txt have both had the exact same line
 modified.&nbsp;
-<p><img align="texttop" border="0" src="../images/Image83_jane6a.jpg" alt="Text Compare" width="485" height="110" >
+<p><img align="texttop" border="0" src="../images/Image83_jane6a.jpg" alt="Text Compare" width="744" height="180" >
 </TD>
 </TR>
 <TR>
@@ -73,7 +73,7 @@ about the change. To do this you first need to figure out who made the change
 and why.
 <p>In the Navigator select file2.txt and choose Team &gt; Show in Resource
 History from the context menu.</p>
-<p><img align="texttop" border="0" src="../images/Image84_reshist.jpg" alt="Resource History" width="483" height="122" ></p>
+<p><img align="texttop" border="0" src="../images/Image84_reshist.jpg" alt="Resource History" width="598" height="179" ></p>
 </TD>
 </TR>
 <TR>
@@ -81,13 +81,13 @@ History from the context menu.</p>
 <b>6.</b>
 </TD>
     <TD valign="top" align="left"> In the Resource History view (see above) we 
-      can see there is a * next to version 1.1. This indicates 1.1 is currently 
+      can see there is a * next to version 1.7. This indicates 1.7 is currently 
       in our Workbench. Looking at the right pane of the text compare viewer (above) 
-      we can see the repository contains 1.2 of file2.txt.&nbsp; 
+      we can see the repository contains 1.8 of file2.txt.&nbsp; 
       <p>
-Looking at the history view again we can see that the author of 1.2 is Fred.
-Looks like it's time to ask Fred why he was changing file2.txt.&nbsp;</p>
-<p>If Fred had entered a meaningful description when releasing his changes,
+Looking at the history view again we can see that the author of 1.8 is tod.
+Looks like it's time to ask tod why he was changing file2.txt.&nbsp;</p>
+<p>If tod had entered a meaningful description when releasing his changes,
 these descriptions would have appeared in the comment field of the Resource
 History view thereby providing us with some insight into the intent of the change.
 </TD>
@@ -99,7 +99,7 @@ History view thereby providing us with some insight into the intent of the chang
     <TD valign="top" align="left"> You can use the four copy buttons to help you 
       merge in conflicting changes made to the repository. 
       <p>
-For now we will assume that Fred's change turns out to be the right change.
+For now we will assume that tod's change turns out to be the right change.
       <p>Select file2.txt and choose Override and Update from the context menu. 
         When asked to confirm the replacement choose Yes. 
       <p>&nbsp;</p>
@@ -114,7 +114,7 @@ For now we will assume that Fred's change turns out to be the right change.
       <p>Looking at the status bar we can see there is still one remaining outgoing
 change to deal with.</p>
 <blockquote>
-  <p><img align="texttop" border="0" src="../images/Image84_status.jpg" alt="Status bar" width="329" height="23" ></p>
+  <p><img align="texttop" border="0" src="../images/Image84_status.jpg" alt="Status bar" width="375" height="19" ></p>
 </blockquote>
 </TD>
 </TR>
