--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64b_fredadd.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64b_fredadd.htm
@@ -65,7 +65,7 @@ Jane filled in.
 Jane created.</P>
 <blockquote>
   <blockquote>
-    <P CLASS="Para"><img align="texttop" border="0" src="../images/Image83_fred1.jpg" alt="Repositories View" width="248" height="153"></P>
+    <P CLASS="Para"><img align="texttop" border="0" src="../images/Image83_fred1.jpg" alt="Repositories View" width="277" height="240"></P>
   </blockquote>
 </blockquote>
 </TD>
@@ -77,7 +77,7 @@ Jane created.</P>
 <TD valign="top" align="left">
 Expand folder1 and you should see the three files that Jane created.
 <blockquote>
-  <p><img align="texttop" border="0" src="../images/Image83_fred2.jpg" alt="Repositories View" width="248" height="194" ></p>
+  <p><img align="texttop" border="0" src="../images/Image83_fred2.jpg" alt="Repositories View" width="278" height="288" ></p>
 </blockquote>
 </TD>
 </TR>
@@ -88,7 +88,7 @@ Expand folder1 and you should see the three files that Jane created.
     <TD valign="top" align="left"> Select the project and choose Checkout as Project 
       from the context menu. 
       <blockquote>
-  <p><img align="texttop" border="0" src="../images/Image83_fred3_add.jpg" alt="Add to Workspace"></p>
+  <p><img align="texttop" border="0" src="../images/Image83_fred3_add.jpg" alt="Add to Workspace" width="392" height="368"></p>
 </blockquote>
 </TD>
 </TR>
