--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync3_rel.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync3_rel.htm
@@ -20,7 +20,7 @@
     <TD valign="top" align="left"> Place the Synchronize view into outgoing mode 
       by clicking on the Outgoing Mode button (#1) and confirming that the title 
       of the view now indicates we are in Outgoing Mode (#2). 
-      <p><img align="texttop" border="0" src="../images/Image84_relmode.jpg" width="483" height="110" alt="Outgoing mode"></p>
+      <p><img align="texttop" border="0" src="../images/Image84_relmode.jpg" width="440" height="125" alt="Outgoing mode"></p>
       <p>&nbsp; 
     </TD>
   </TR>
@@ -36,7 +36,7 @@
     <TD valign="top" align="left"> The comparison viewer shows that&nbsp;our copy 
       of file3.txt has a change to the second line.&nbsp; The repository copy 
       is shown in the right pane. 
-      <p><img align="texttop" border="0" src="../images/Image84_jane.jpg" width="484" height="92" alt="Text compare">
+      <p><img align="texttop" border="0" src="../images/Image84_jane.jpg" width="552" height="100" alt="Text compare">
     </TD>
   </TR>
   <TR> 
@@ -52,12 +52,12 @@
     <TD valign="top" align="left"> 
       <P CLASS="Para"> <b>5.</b> </P>
     </TD>
-    <TD valign="top" align="left"> At this point Fred may want to Synchronize 
+    <TD valign="top" align="left"> At this point tod may want to Synchronize 
       with the repository to catch up to the changes you just committed. </TD>
   </TR>
   </TBODY> 
 </TABLE>
-<P>We have successfully collaborated with Fred by making simultaneous changes 
+<P>We have successfully collaborated with tod by making simultaneous changes 
   to the same project. The Synchronization view&nbsp; and CVS Repository History 
   view allowed us to determine the specific changes each user was making and to 
   quickly stay on top of the ongoing changes being committed into the repository. 
