*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_layouts_fill.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_layouts_fill.htm
@@ -30,6 +30,38 @@ only has one child. In the example above, the <b><a href="../reference/api/org/e
 FillLayout</a></b> causes the label to completely the fill its parent shell.</P>
 
 
+<P >
+The following table summarizes the attributes of
+<b><a href="../reference/api/org/eclipse/swt/layout/FillLayout.html">
+FillLayout</a></b>.</P>
+
+
+<TABLE BORDER="1">
+<TR>
+<TH ROWSPAN="1" COLSPAN="1">
+<P CLASS="CellHeading">
+Attribute</P>
+</TH>
+<TH ROWSPAN="1" COLSPAN="1">
+<P CLASS="CellHeading">
+Description</P>
+</TH>
+</TR>
+<TR>
+<TD>
+<P CLASS="CellBody">
+<b>type</b></P>
+</TD>
+<TD>
+<P CLASS="CellBody">Can be one of <b>HORIZONTAL </b>(layout in a row), <b>VERTICAL</b>
+ (layout in a column). </P>
+</TD>
+</TR>
+</TABLE>
+<P >
+&nbsp;</P>
+
+
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corp. and others 2000,2002."width="250" height="12"></a></p>
 
 </BODY>
