--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_layouts_form.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_layouts_form.htm
@@ -20,7 +20,7 @@ lays out widgets using an attachment model.&nbsp; A <a href="../reference/api/or
 </b></a>can be defined for each side of a widget and stored in its layout data (<a href="../reference/api/org/eclipse/swt/layout/FormData.html"><b>FormData</b></a>).&nbsp;
 The <a href="../reference/api/org/eclipse/swt/layout/FormData.html"><b>FormData</b></a><b>
 </b>can be used to designate a requested <b>width</b> and <b>height</b> for the
-widget, provided these values don't conflict with the attachment constraints.</P>
+widget, provided these values don't conflict with the attachment constraints.&nbsp;&nbsp;</P>
 <P >A <a href="../reference/api/org/eclipse/swt/layout/FormAttachment.html"><b>FormAttachment
 </b></a>is used to attach a designated side of the widget to the parent <b><a href="../reference/api/org/eclipse/swt/widgets/Composite.html">Composite</a>
 </b>or another widget in the layout.&nbsp; Typically, you do not set attachments
@@ -28,68 +28,198 @@ on all sides of a widget.&nbsp; It is very common to specify only one horizontal
 (<b>left</b> or <b>right</b>) attachment and one vertical (<b>top</b> or <b>bottom</b>)
 attachment and allow the widgets to take the size specified in their <a href="../reference/api/org/eclipse/swt/layout/FormData.html"><b>FormData</b></a><b>,
 </b>or their preferred size, if no size is specified in the <a href="../reference/api/org/eclipse/swt/layout/FormData.html"><b>FormData</b></a>.</P>
-<P ><b>&nbsp;</b>Attachments can be configured in a variety of ways:</P>
-<TABLE BORDER="1" width="658">
-<TR>
-<TH ROWSPAN="1" COLSPAN="1" width="163">
-<P CLASS="CellHeading">
-Attachment Type</P>
-</TH>
-<TH ROWSPAN="1" COLSPAN="1" width="479">
-<P CLASS="CellHeading">
-Usage</P>
-</TH>
-</TR>
-<TR>
-<TD width="163">
-<P CLASS="CellBody">
-<b>position, offset</b></P>
-</TD>
-<TD width="479">
-<P CLASS="CellBody">
-Attach the specified side of a widget to a <b>position</b> (percentage value
-0-100) in the parent widget.&nbsp; An optional pixel <b>offset</b> can be added.</P>
-</TD>
-</TR>
-<TR>
-<TD width="163">
-<P CLASS="CellBody">
-<b>adjacent widget, offset</b></P>
-</TD>
-<TD width="479">
-<P CLASS="CellBody">
-Attach the specified side of a widget to the adjacent side of a target widget
+<P >Attachments can be configured in a variety of ways:</P>
+<ul>
+  <li>You can attach the specified side of a widget to a <b>position</b> (percentage value
+0-100) in the parent widget.&nbsp; An optional pixel <b>offset</b> can be added.</li>
+  <li>You can attach the specified side of a widget to the adjacent side of a target widget
 inside the composite.&nbsp; An optional pixel <b>offset</b> can be added.&nbsp;
 The side where the target widget is attached is inferred based on the side
 specified in the source widget.&nbsp; For example, attaching the <b>top</b> edge
 to a widget implies that it is being attached to the <b>bottom</b> edge of the
-target widget.</P>
-</TD>
-</TR>
-<TR>
-<TD width="163">
-<P CLASS="CellBody">
-<b>reference widget, offset</b></P>
-</TD>
-<TD width="479">
-<P CLASS="CellBody">
-Attach the specified side of a widget to a particular side of a target widget
+    adjacent widget.</li>
+  <li>You can attach the specified side of a widget to a particular side of a target widget
 inside the composite.&nbsp; An optional pixel <b>offset</b> can be added.&nbsp;
 This can be used, for example, to align the top of a widget with the top of
-another widget so that they will always line up vertically.</P>
-</TD>
+another widget so that they will always line up vertically.</li>
+  <li>You can center the widget relative to a target widget.&nbsp; The center need only be
+specified for one side (<b>left</b> or <b>right</b>, <b>top</b> or <b>bottom</b>)
+in the direction being centered.</li>
+</ul>
+<p>The following table summarizes the attributes of a <a href="../reference/api/org/eclipse/swt/layout/FormLayout.html"><b>FormLayout</b></a><b>.</b></p>
+<TABLE BORDER="1" width="658">
+<TR>
+<TH ROWSPAN="1" COLSPAN="1" width="163">
+<P CLASS="CellHeading">
+Attribute</P>
+</TH>
+<TH ROWSPAN="1" COLSPAN="1" width="479">
+<P CLASS="CellHeading">
+Description</P>
+</TH>
 </TR>
 <TR>
 <TD width="163">
-<b>reference widget, centered, offset</b>
+<P CLASS="CellBody">
+<b>marginHeight</b></P>
 </TD>
 <TD width="479">
-Center the widget relative to a target widget.&nbsp; The center need only be
-specified for one side (<b>left</b> or <b>right</b>, <b>top</b> or <b>bottom</b>)
-in the direction being centered.
+<P CLASS="CellBody">Specifies the number of pixels of vertical margin that will
+be placed along the top and bottom edges of the layout.</P>
 </TD>
 </TR>
+<tr>
+<TD width="163">
+<P CLASS="CellBody"><b>marginWidth</b></P>
+</TD>
+<TD width="479">
+<P CLASS="CellBody">Specifies the number of pixels of horizontal margin that
+will be placed along the left and right edges of the layout.</P>
+</TD>
+</tr>
 </TABLE>
+
+
+<p>The following table summarizes the attributes of a <a href="../reference/api/org/eclipse/swt/layout/FormLayout.html"><b>FormData</b></a><b>.</b></p>
+<TABLE BORDER="1" width="658">
+<TR>
+<TH ROWSPAN="1" COLSPAN="1" width="163">
+<P CLASS="CellHeading">
+Attribute</P>
+</TH>
+<TH ROWSPAN="1" COLSPAN="1" width="479">
+<P CLASS="CellHeading">
+Description</P>
+</TH>
+</TR>
+<TR>
+<TD width="163">
+<P CLASS="CellBody">
+<b>top</b></P>
+</TD>
+<TD width="479">
+<P CLASS="CellBody">Specifies the attachment for the <b>top</b> side of the
+control.</P>
+</TD>
+</TR>
+<tr>
+<TD width="163">
+<P CLASS="CellBody"><b>left</b></P>
+</TD>
+<TD width="479">
+<P CLASS="CellBody">Specifies the attachment for the <b>left</b> side of the
+control.</P>
+</TD>
+</tr>
+<tr>
+<TD width="163">
+<b>bottom</b>
+</TD>
+<TD width="479">
+Specifies the attachment for the <b>bottom</b> side of the control.
+</TD>
+</tr>
+<tr>
+<TD width="163">
+<b>right</b>
+</TD>
+<TD width="479">
+Specifies the attachment for the <b>right</b> side of the control.
+</TD>
+</tr>
+<tr>
+<TD width="163">
+<b>width</b>
+</TD>
+<TD width="479">
+Specifies the preferred width in pixels of the control in the form.
+</TD>
+</tr>
+<tr>
+<TD width="163">
+<b>height</b>
+</TD>
+<TD width="479">
+Specifies the preferred height in pixels of the control in the form.
+</TD>
+</tr>
+</TABLE>
+
+
+<p>
+The following table summarizes the attributes of a <a href="../reference/api/org/eclipse/swt/layout/FormAttachment.html"><b>FormAttachment.</b></a></p>
+
+
+<TABLE BORDER="1" width="658">
+<TR>
+<TH ROWSPAN="1" COLSPAN="1" width="163">
+<P CLASS="CellHeading">
+Attribute</P>
+</TH>
+<TH ROWSPAN="1" COLSPAN="1" width="479">
+<P CLASS="CellHeading">
+Description</P>
+</TH>
+</TR>
+<TR>
+<TD width="163">
+<P CLASS="CellBody"><b>alignment</b></P>
+</TD>
+<TD width="479">
+<P CLASS="CellBody">Specifies the alignment of the control side that is attached
+to a control.&nbsp; <b>DEFAULT</b> indicates that the widget should be attached
+to the adjacent side of the specified <b>control</b>.&nbsp; For top and bottom
+attachments, <b>TOP</b>, <b>BOTTOM</b>, and <b>CENTER</b> are used to indicate
+attachment of the specified side of the widget to the specified side of the <b>control</b>.&nbsp;
+For left and right attachments, <b>LEFT</b>, <b>RIGHT</b>, and <b>CENTER</b> are
+used to indicate attachment of the specified side of the widget to the specified
+side of the <b>control</b>.&nbsp; (For example, using <b>TOP</b> indicates that
+the <b>top</b> side of the attachment's widget should be attached to the top
+side of the specified <b>control</b>.)</P>
+</TD>
+</TR>
+<tr>
+<TD width="163">
+<P CLASS="CellBody"><b>control</b></P>
+</TD>
+<TD width="479">
+<P CLASS="CellBody">Specifies the target control to which the attachment's
+widget is attached.</P>
+</TD>
+</tr>
+<tr>
+<TD width="163">
+<b>denominator</b>
+</TD>
+<TD width="479">
+Specifies the denominator of the &quot;a&quot; term in the equation, y=ax+b,
+which defines the attachment.
+</TD>
+</tr>
+<tr>
+<TD width="163">
+<b>numerator</b>
+</TD>
+<TD width="479">
+Specifies the numerator of the &quot;a&quot; term in the equation y=ax+b, which
+defines the attachment.
+</TD>
+</tr>
+<tr>
+<TD width="163">
+<b>offset</b>
+</TD>
+<TD width="479">
+Specifies the offset in pixels of the control side from the attachment
+position.&nbsp; Can be positive or negative.&nbsp; This is the &quot;b&quot;
+term in the equation y=ax+b, which defines the attachment.
+</TD>
+</tr>
+</TABLE>
+
+
+<p>
+&nbsp;</p>
 
 
 <p>
