--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_layouts_row.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_layouts_row.htm
@@ -29,8 +29,101 @@ RowLayout</b></a>, extra space remaining in the <b><a href="../reference/api/org
 </b>will be allocated as margins between the widgets.</P>
 <P >
 The height and width of each widget in a <a href="../reference/api/org/eclipse/swt/layout/RowLayout.html"><b>
-RowLayout</b></a> can be specified in a <a href="../reference/api/org/eclipse/swt/layout/RowData.html"><b> RowData</b></a> object which should be set in the widget using
+RowLayout</b></a> can be specified in a <a href="../reference/api/org/eclipse/swt/layout/RowData.html"><b> RowData</b></a> 
+object which should be set in the widget using
 <b>setLayoutData</b>.</P>
+
+
+<p>The following table summarizes the attributes of
+<a href="../reference/api/org/eclipse/swt/layout/RowLayout.html"><b>
+RowLayout</b></a>.</p>
+<table BORDER="1">
+  <tr>
+    <th ROWSPAN="1" COLSPAN="1">
+      <p CLASS="CellHeading">Attribute</p>
+    </th>
+    <th ROWSPAN="1" COLSPAN="1">
+      <p CLASS="CellHeading">Description</p>
+    </th>
+  </tr>
+  <tr>
+    <td>
+      <p CLASS="CellBody"><b>justify</b></p>
+    </td>
+    <td>
+      <p CLASS="CellBody">Can be one of <b>SWT.HORIZONTAL </b>(layout in a row),
+      <b>SWT.VERTICAL</b> (layout in a column).</p>
+    </td>
+  </tr>
+  <tr>
+    <td><b>marginBottom</b></td>
+    <td>Specifies the number of pixels to be placed along the bottom edge of the
+      layout.</td>
+  </tr>
+  <tr>
+    <td><b>marginLeft</b></td>
+    <td>Specifies the number of pixels to be placed along the left edge of the
+      layout.</td>
+  </tr>
+  <tr>
+    <td><b>marginRight</b></td>
+    <td>Specifies the number of pixels to be placed along the right edge of the
+      layout.</td>
+  </tr>
+  <tr>
+    <td><b>marginTop</b></td>
+    <td>Specifies the number of pixels to be placed along the top edge of the
+      layout.</td>
+  </tr>
+  <tr>
+    <td><b>pack</b></td>
+    <td>Specifies whether all widgets should be forced to be the same size.</td>
+  </tr>
+  <tr>
+    <td><b>spacing</b></td>
+    <td>Specifies the number of pixels between one cell and its adjacent cells</td>
+  </tr>
+  <tr>
+    <td><b>type</b></td>
+    <td>Can be one of <b>HORIZONTAL </b>(layout in rows), <b>VERTICAL</b>
+      (layout in columns).</td>
+  </tr>
+  <tr>
+    <td><b>wrap</b></td>
+    <td>Specifies whether a control will be wrapped to the next row or column if
+      there is insufficient space in<br>
+      the current row or column.</td>
+  </tr>
+</table>
+<p>The following table summarize the attributes of <a href="../reference/api/org/eclipse/swt/layout/RowData.html"><b> RowData</b></a>.</p>
+<table BORDER="1" width="681">
+  <tr>
+    <th ROWSPAN="1" COLSPAN="1" width="90">
+      <p CLASS="CellHeading">Attribute</p>
+    </th>
+    <th ROWSPAN="1" COLSPAN="1" width="575">
+      <p CLASS="CellHeading">Description</p>
+    </th>
+  </tr>
+  <tr>
+    <td width="90">
+      <p CLASS="CellBody"><b>width</b></p>
+    </td>
+    <td width="575">
+      <p CLASS="CellBody">Specifies the width of the cell in pixels.</p>
+    </td>
+  </tr>
+  <tr>
+    <td width="90">
+      <b>height</b>
+    </td>
+    <td width="575">
+      Specifies the height of the cell in pixels.
+    </td>
+  </tr>
+</table>
+<P >
+&nbsp;</P>
 
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corp. and others 2000,2002."width="250" height="12"></a></p>
