--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-20.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-20.htm
@@ -20,41 +20,41 @@ system. However, there are a number of ways that this behavior can be customized
 </p>
 
 <dl>
-  <dt><em>Banner Font</em></dt>
+  <dt>Banner Font</dt>
   <dd>used in PDE editors, welcome pages and in the title area of
     many wizards. For instance the New Project wizard uses this font for the top
     title,</dd>
-  <dt><em>Header Font</em></dt>
+  <dt>Header Font</dt>
   <dd>used as a section heading. For instance the
     Welcome page for the Eclipse Platform uses this font for the top title,</dd>
-  <dt><em>Text Font</em></dt>
+  <dt>Text Font</dt>
   <dd>used in text editors.</dd>
 </dl>
 
-<p>You can change these fonts as follows:
+<p>To change these fonts:
 </p>
 
 <ol>
   <li>On the main menu bar, click <b>Window &gt; Preferences</b>.</li>
   <li>Expand the <b>Workbench</b> category and select <b>Fonts</b>.</li>
   <li>Select the font you want to change.</li>
-  <li>Click the <b>Change</b> push button.</li>
+  <li>Click <b>Change</b>.</li>
   <li>Use the dialog which opens to select a font.</li>
   <li>Click <b>OK</b>.</li>
 </ol>
 
-<p>Note: You can also click the <b>Use System Font</b> button to set the font 
-  to a reasonable value chosen by the platform. For example, on Windows this will 
+<p>Note: You can also click <b>Use System Font</b> to set the font 
+  to a reasonable value chosen by the operating system. For example, on Windows this will 
   use the font selected in the Display Properties control panel.</p>
 
-<p>Plugins which use other fonts may also provide preference entries to allow them to
+<p>Plug-ins that use other fonts may also provide preference entries to allow them to
 be customized. For example, the Java Development Tools provide a setting for controlling
 the font used by the Java editor (<b>Java &gt; Editor &gt; Appearance &gt; Text font</b>).
 </p>
 
 <p>In addition to the above, some text is always displayed in the system font. For example, 
 the navigator tree always does this. To change the font used in these areas, you can use the
-configuration tools provided by the system (eg. the Display Properties control panel on
+configuration tools provided by the operating system (for example, the Display Properties control panel on
 Windows, or the .Xdefaults file in Motif).
 </p>
 
@@ -70,7 +70,7 @@ Windows, or the .Xdefaults file in Motif).
   <li>Click <b>OK</b>.</li>
 </ol>
 
-<p>Plugins which use other colors may also provide preference entries to allow them to
+<p>Plug-ins that use other colors may also provide preference entries to allow them to
 be customized. For example, the searching support provides a setting for controlling
 the color used to display inexact matches (<b>Workbench &gt; Search &gt; Foreground
 color for inexact matches</b>).
