*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_codeassist.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_codeassist.htm
@@ -12,18 +12,18 @@
 <H2>
 Performing CodeAssist on Java code</H2>
 <P>
-JDT API allows to other plugins to perform codeassist or codeselect on some java elements. 
-Elements that allow this manipulation implements <b><a href="../reference/api/org/eclipse/jdt/core/ICodeAssist.html"> ICodeAssist</a></b>.
-In the Java model there are two elements that implements this interface: <b><a href="../reference/api/org/eclipse/jdt/core/IClassfile.html"> IClassfile</a></b> and <b><a href="../reference/api/org/eclipse/jdt/core/ICompilationUnit.html"> ICompilationUnit</a></b>.
+JDT API allows other plugins to perform codeassist or codeselect on some java elements. 
+Elements that allow this manipulation implement <b><a href="../reference/api/org/eclipse/jdt/core/ICodeAssist.html"> ICodeAssist</a></b>.
+In the Java model there are two elements that implement this interface: <b><a href="../reference/api/org/eclipse/jdt/core/IClassfile.html"> IClassfile</a></b> and <b><a href="../reference/api/org/eclipse/jdt/core/ICompilationUnit.html"> ICompilationUnit</a></b>.
 <P>
-There are two kinds of manipulation
+There are two kinds of manipulation:
 <ul>
-<li>Code completion: compute the completion of a Java token.</li>
-<li>Code selection: give the Java element at a given position.</li>
+<li>Code completion - compute the completion of a Java token.</li>
+<li>Code selection - answer the Java element at a given position.</li>
 </ul>
 </P>
 <P>
-Note: completion and selection give results for a classfile only if it has an attached source.
+Note: completion and selection answer results for a classfile only if it has attached source.
 </P>
 <H3>
 Code completion</h3>
@@ -33,11 +33,11 @@ Performing a code completion
 </h4>
 <P>
 The only way to programmatically perform code completion is to use <b>ICodeAssist.codeComplete</b>.
-You specify the location of the completion in the unit and give an instance of <b><a href="../reference/api/org/eclipse/jdt/core/ICompletionRequestor.html"> ICompletionRequestor</a></b> to accept the possible completions.</P>
+You specify the location of the completion in the unit and provide an instance of <b><a href="../reference/api/org/eclipse/jdt/core/ICompletionRequestor.html"> ICompletionRequestor</a></b> to accept the possible completions.</P>
 
 <P>
-Each kind of proposals is accepted by a method of the requestor.
-The parameters of these methods gives the description of the proposed element (name, parameters, declaring type, ...), the position and the relevance of the proposal in the current context.</P>
+Each kind of proposal is accepted by a method of the requestor.
+The parameters of these methods describe the element (name, parameters, declaring type, ...) and its position, as well as the relevance of the proposal in the current context.</P>
 <P>
 When you are not interested by all the result kinds, a simple way to perform code completion is to use <b><a href="../reference/api/org/eclipse/jdt/core/CompletionRequestorAdapter.html"> CompletionRequestorAdapter</a></b>.
 <font color='#4444CC'><pre>
@@ -70,10 +70,10 @@ Code completion options
 </h4>
 
 <P>
-The options of code completion can be change by other plugins. You can modify JDT/Core options to change the completion behavior.</P>
+The options of code completion can be changed by other plugins. You can modify JDT/Core options to change the completion behavior.</P>
 <P>There are two options:
 <ul>
-<li>Activate Visibility Sensitive Completion: when active, completion doesn't show that you can not see (e.g. you can not see private methods of a super class).</li>
+<li>Activate Visibility Sensitive Completion: when active, completion doesn't answer what you can not see (e.g. you can not see private methods of a super class).</li>
 <li>Automatic Qualification of Implicit Members: when active, completion automatically qualifies completion on implicit field references and message expressions.</li>
 </ul>
 </P>
@@ -89,7 +89,7 @@ Performing a code selection
 </h4>
 <P>
 If you want to programmatically perform code selection, the method to use is <b>ICodeAssist.codeSelect</b>. This method needs to know the start location of the selection and the length.
-The result is an array of Java elements. Most of the time there is only one element in the array, but if the selection is ambiguous then all the possible elements are given.
+The result is an array of Java elements. Most of the time there is only one element in the array, but if the selection is ambiguous then all the possible elements are returned.
 
 <font color='#4444CC'><pre>
    // Get the compilation unit
@@ -108,7 +108,7 @@ The result is an array of Java elements. Most of the time there is only one elem
 Selection at cursor location.
 </h4>
 <P>
-If the length of the selection is equals to 0 then the selection is computed with the complete enclosing token.</P>
+If the length of the selection equals 0 then the selection is computed with the complete enclosing token.</P>
 
 <i><pre>
    public void fooMethod(Object) {
