--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_ui.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_ui.htm
@@ -22,7 +22,7 @@ void showMethod(IMember member) {<BR>
 &nbsp;&nbsp;&nbsp; ICompilationUnit cu = member.getCompilationUnit();<BR>
 &nbsp;&nbsp;&nbsp; IEditorPart javaEditor = JavaUI.openInEditor(cu);<BR>
 &nbsp;&nbsp;&nbsp; JavaUI.revealInEditor(javaEditor, member);<BR>
-}</P>
-<p CLASS="Code"><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
+}</P CLASS="Code">
+<p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
 </BODY>
 </HTML>
