--- a/bundles/org.eclipse.platform.doc.user/whatsNew/wnWorkbench.htm
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/wnWorkbench.htm
@@ -33,13 +33,13 @@ Eclipse Workbench. The following lists some of them.
 <P CLASS="Para">
   <dt>Recently used file list</dt> 
   <dd>The <b>File</b> menu now shows the most recently opened files. You
-  	can specify the size of this list on the <b>Workbench->Editors</b> 
+  	can specify the size of this list on the <b>Workbench > Editors</b> 
   	preference page.</dd>
 </P>
 <P CLASS="Para">
   <dt>Single click activation</dt>
   <dd>You now have the option to activate files with a <a href="../tasks/topenmode.htm">single click</a>
-  	instead of a double mouse click. See the <b>Workbench</b> preference page
+  	instead of a double mouse click. See the Workbench preference page
   	for related settings.
   </dd>
 </P>
@@ -53,12 +53,12 @@ Eclipse Workbench. The following lists some of them.
   <dd><a href="../concepts/accessibility/accessmain.htm">Accessibility</a> features have been added to Eclipse. Accessibility features 
   	help people with a physical disability or those with special needs to use 
   	software products successfully. Some of these features can help everyone
-  	use Eclipse more effectively. The <b>Window->Keyboard Shortcuts</b> menu for
+  	use Eclipse more effectively. The <b>Window > Keyboard Shortcuts</b> menu for
   	example lists keyboard shortcuts for frequently used operations.</dd>
 </P>
 <P CLASS="Para">
   <dt>Key bindings</dt>
-  <dd>The <b>Window->Editors</b> preference page gives you the option to use 
+  <dd>The <b>Window > Editors</b> preference page gives you the option to use 
   	non-standard <a href="../tasks/tkeybindings.htm">key bindings</a>.</dd>
 </P>
 <P CLASS="Para">
@@ -66,7 +66,7 @@ Eclipse Workbench. The following lists some of them.
   <dd>There is a new concept of <a href="../concepts/cdecorations.htm">label decorations</a>. 
   	Plugins may contribute information to resource labels and icons. You can 
   	select which decorations you would like to see on the 
-  	<b>Workbench->Label Decorations</b> preference page.
+  	<b>Workbench > Label Decorations</b> preference page.
   </dd>
 </P>
 <P CLASS="Para">
@@ -89,7 +89,7 @@ Eclipse Workbench. The following lists some of them.
   	have to open another window in order to open a second Resource perspective.
   	<P CLASS="Para">
   	The perspective preferences have changed as well and have been moved to
-  	<b>Workbench->Perspectives</b>.
+  	<b>Workbench > Perspectives</b>.
   	</P>  	
   </dd>
 </P>
@@ -107,7 +107,7 @@ Eclipse Workbench. The following lists some of them.
   	Java perspective, the same files will be visible in the Java perspective.
   	<P CLASS="Para">
   	You may specify the maximum number of open editors on the 
-  	<b>Workbench->Editors</b> preference page. Old editors will be closed if
+  	<b>Workbench > Editors</b> preference page. Old editors will be closed if
   	the limit is exceeded.
   	</P>  	
   </dd>
@@ -115,7 +115,7 @@ Eclipse Workbench. The following lists some of them.
 <P CLASS="Para">
   <dt>Text file encoding</dt>
   <dd>You can select the character encoding used to read and write files on
-  	the <b>Workbench->Editors</b> preference page.</dd>
+  	the <b>Workbench > Editors</b> preference page.</dd>
 </P>
 <P CLASS="Para">
   <dt>Quick Fix</dt>
