--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-107b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-107b.htm
@@ -23,7 +23,7 @@ label decorations that indicate the CVS state of the resource.
     Workbench Preferences dialog.</li>
   <li>In the dialog, select the<b> Workbench &gt; Label Decorations</b> preference 
     page. This page allows the enabling and disabling of all decorations defined 
-    by different plugins in the Workbench.</li>
+    by different plug-ins in the Workbench.</li>
   <li>Click on the CVS box to enable the CVS decorations.</li>
   <li> Click <b>OK</b>.</li>
 </ol>
