--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync2.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync2.htm
@@ -73,7 +73,7 @@ about the change. To do this you first need to figure out who made the change
 and why.
 <p>In the Navigator select file2.txt and choose Team &gt; Show in Resource
 History from the context menu.</p>
-<p><img align="texttop" border="0" src="../images/Image84_reshist.jpg" alt="Resource History" width="598" height="179" ></p>
+<p><img align="texttop" border="0" src="../images/Image84_reshist.jpg" alt="Resource History" width="511" height="164" ></p>
 </TD>
 </TR>
 <TR>
@@ -85,9 +85,9 @@ History from the context menu.</p>
       in our Workbench. Looking at the right pane of the text compare viewer (above) 
       we can see the repository contains 1.8 of file2.txt.&nbsp; 
       <p>
-Looking at the history view again we can see that the author of 1.8 is tod.
-Looks like it's time to ask tod why he was changing file2.txt.&nbsp;</p>
-<p>If tod had entered a meaningful description when releasing his changes,
+Looking at the history view again we can see that the author of 1.8 is Fred.
+Looks like it's time to ask Fred why he was changing file2.txt.&nbsp;</p>
+<p>If Fred had entered a meaningful description when releasing his changes,
 these descriptions would have appeared in the comment field of the Resource
 History view thereby providing us with some insight into the intent of the change.
 </TD>
@@ -99,7 +99,7 @@ History view thereby providing us with some insight into the intent of the chang
     <TD valign="top" align="left"> You can use the four copy buttons to help you 
       merge in conflicting changes made to the repository. 
       <p>
-For now we will assume that tod's change turns out to be the right change.
+For now we will assume that Fred's change turns out to be the right change.
       <p>Select file2.txt and choose Override and Update from the context menu. 
         When asked to confirm the replacement choose Yes. 
       <p>&nbsp;</p>
